--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
     "azsm": "dist/cli/bin.js"
   },
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview",
+    "build": "tsc",
     "postinstall": "tsc"
   },
   "devDependencies": {
@@ -17,13 +15,13 @@
     "@types/yargs": "^17.0.32",
     "prettier": "^3.3.3",
     "tsx": "^4.16.2",
-    "vite": "^5.4.1",
     "vitest": "^2.0.5"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "@hpcc-js/wasm-graphviz": "^1.3.0",
     "@inquirer/prompts": "^5.2.1",
     "azure-devops-node-api": "^14.0.1",
     "chalk": "^5.3.0",
