--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
   "devDependencies": {
     "@dagrejs/dagre": "^1.1.8",
     "@fontsource/fira-mono": "^5.2.7",
+    "@jesterkit/exe-sveltekit": "^0.1.7",
     "@playwright/test": "^1.56.1",
-    "@sveltejs/adapter-node": "^5.4.0",
     "@sveltejs/kit": "^2.48.5",
     "@sveltejs/vite-plugin-svelte": "^6.2.1",
     "@tailwindcss/vite": "^4.1.17",
