--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@sveltejs/kit": "^2.48.5",
     "@sveltejs/vite-plugin-svelte": "^6.2.1",
     "@tailwindcss/vite": "^4.1.17",
+    "@types/bun": "^1.3.5",
     "@types/node": "^22.19.1",
     "@types/papaparse": "^5.5.1",
     "@vitest/browser-playwright": "^4.0.10",
