--- a/package.json
+++ b/package.json
@@ -1,33 +1,46 @@
 {
   "name": "azure-story-map",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.1.0",
   "type": "module",
-  "bin": {
-    "azsm": "dist/cli/bin.js"
-  },
   "scripts": {
-    "build": "tsc",
-    "postinstall": "tsc"
+    "dev": "vite dev",
+    "build": "vite build",
+    "preview": "vite preview",
+    "prepare": "svelte-kit sync || echo ''",
+    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+    "format": "prettier --write .",
+    "lint": "prettier --check .",
+    "test:unit": "vitest"
   },
   "devDependencies": {
-    "@types/node": "^20.14.11",
-    "@types/yargs": "^17.0.32",
-    "prettier": "^3.3.3",
-    "tsx": "^4.16.2",
-    "vitest": "^2.0.5"
-  },
-  "peerDependencies": {
-    "typescript": "^5.0.0"
+    "@dagrejs/dagre": "^1.1.8",
+    "@fontsource/fira-mono": "^5.2.7",
+    "@jesterkit/exe-sveltekit": "^0.1.7",
+    "@playwright/test": "^1.56.1",
+    "@sveltejs/kit": "^2.48.5",
+    "@sveltejs/vite-plugin-svelte": "^6.2.1",
+    "@tailwindcss/vite": "^4.1.17",
+    "@types/bun": "^1.3.5",
+    "@types/node": "^22.19.1",
+    "@types/papaparse": "^5.5.1",
+    "@vitest/browser-playwright": "^4.0.10",
+    "@xyflow/svelte": "^1.4.2",
+    "prettier": "^3.6.2",
+    "prettier-plugin-svelte": "^3.4.0",
+    "prettier-plugin-tailwindcss": "^0.7.1",
+    "svelte": "^5.43.8",
+    "svelte-check": "^4.3.4",
+    "tailwindcss": "^4.1.17",
+    "typescript": "^5.9.3",
+    "vite": "^7.2.2",
+    "vitest": "^4.0.10",
+    "vitest-browser-svelte": "^2.0.1"
   },
   "dependencies": {
-    "@hpcc-js/wasm-graphviz": "^1.3.0",
-    "@inquirer/prompts": "^5.2.1",
-    "azure-devops-node-api": "^14.0.1",
-    "chalk": "^5.3.0",
-    "cli-simple-table": "^1.1.1",
-    "inquirer-select-pro": "^1.0.0-alpha.6",
-    "jest-diff": "^29.7.0",
-    "yargs": "^17.7.2"
+    "azure-devops-node-api": "^15.1.1",
+    "bits-ui": "^2.14.4",
+    "papaparse": "^5.5.3"
   }
 }
