--- a/.github/workflows/build-executables.yml
+++ b/.github/workflows/build-executables.yml
@@ -39,14 +39,11 @@ jobs:
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: executable-${{ matrix.target }}
+          name: azsm-${{ matrix.target }}
           path: ./dist/${{ matrix.artifact-name }}
           retention-days: 30
-  release:
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - name: Create Release
+
+      - name: Upload file to Release
         if: github.ref_type == 'tag'
         uses: softprops/action-gh-release@v1
         with:
