--- a/.github/workflows/build-executables.yml
+++ b/.github/workflows/build-executables.yml
@@ -14,6 +14,8 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     strategy:
       matrix:
         include:
